welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: value ouest is not a member of object plm.universe.Direction
    if (getDirection==Direction.ouest){
                                ^SnakeBuggle:18: error: value est is not a member of object plm.universe.Direction
    if (getDirection==Direction.est){
                                ^SnakeBuggle:25: error: value ouest is not a member of object plm.universe.Direction
     if (getDirection==Direction.ouest){
                                 ^