welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  var fini : Boolean =false
  while (fini==false){
    while(estFaceMur==false){
      avance()
    }
    if (getDirection==Direction.ouest){
      droite()
      avance()
      droite()
    }
    else{
      gauche()
      avance()
      gauche()
    }
    if (getDirection==Direction.est){
      gauche()
      if(estFaceMur==true){
        fini==true
      }

    }
     if (getDirection==Direction.ouest){
      droite()
      if(estFaceMur==true){
        fini==true
      }

    }
  }
}